--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <i class="fab fa-facebook-f"></i>
     <i class="fab fa-instagram"></i>
     <i class="fas envelope fa-envelope "></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2020 hariom TinDog</p>
 
   </footer>
 
